--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.MyNotesExample"
         tools:targetApi="31">
         <activity
-            android:name=".detail.view.DetailActivity"
+            android:name=".ui.detail.view.DetailActivity"
             android:exported="false" />
         <activity
-            android:name=".main.view.MainActivity"
+            android:name=".ui.main.view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
